# projtest

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  task.txt
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  task_manager_app  task_manager_tests
docs/doxygen/html/: annotated.html  annotated_dup.js  class_task_manager-members.html  class_task_manager.html  class_task_manager.js  classes.html  classtask__manager_1_1_task_manager-members.html  classtask__manager_1_1_task_manager.html  classtask__manager_1_1_task_manager.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  index.html  main_8cpp.html  main_8cpp.js  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  namespacetask__manager.html  namespacetask__manager.js  navtreedata.js  navtreeindex0.js  struct_date-members.html  struct_date.html  struct_date.js  struct_task-members.html  struct_task.html  struct_task.js  (+27 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  (+25 more)
include/: task.h  task_manager.h
src/: main.cpp  task.cpp  task_manager.cpp
tests/: test_task_core.cpp  test_task_manager.cpp
